// $Id: CHANGELOG.txt,v 1.320 2009-07-28 12:13:46 dries Exp $

Drupal 7.0, xxxx-xx-xx (development version)
----------------------
- Database:
    * Fully rewritten database layer utilizing PHP 5's PDO abstraction layer.
    * Drupal now requires MySQL >= 5.0 or PostgreSQL >= 8.3.
    * Added query builders for INSERT, UPDATE, DELETE, MERGE, and SELECT queries.
    * Support for master/slave replication, transactions, multi-insert queries,
      delayed inserts, and other features.
    * Added support for the SQLite database engine.
    * Default to InnoDB engine, rather than MyISAM, on MySQL when available.
      This offers increased scalability and data integrity.
- Security:
    * Protected cron.php -- cron will only run if the proper key is provided.
    * Implemented much stronger password hashes that are also compatible with the
      Portable PHP password hashing framework.
    * Implemented a pluggable password hashing API supporting alternative
      hashing and authentication schemes.
- Usability:
    * Improved installer requirements check.
    * Improved support for integration of WYSIWYG editors.
    * Implemented drag-and-drop positioning for input format listings.
    * Implemented drag-and-drop positioning for language listing.
    * Implemented drag-and-drop positioning for poll options.
    * Provided descriptions and human-readable names for user permissions.
    * Removed comment controls for users.
    * Removed display order settings for comment module. Comment display
      order can now be customised using the Views module.
    * Added additional features to the default install profile, and implemented
      a "slimmed down" install profile designed for developers.
    * Added an administrator role which is assigned all permisions for
      installed modules automatically.
    * Image toolkits are now provided by modules (rather than requiring a manual
      file copy to the includes directory).