@@ -1,5 +1,5 @@
 <?php
-// $Id: system.admin.inc,v 1.163 2009-07-20 18:51:34 dries Exp $
+// $Id: system.admin.inc,v 1.164 2009-07-28 19:06:16 dries Exp $
 
 /**
  * @file
@@ -598,13 +598,32 @@ function system_modules($form_state = array()) {
     foreach ($module->requires as $requires => $v) {
       if (!isset($files[$requires])) {
         $extra['requires'][$requires] = t('@module (<span class="admin-missing">missing</span>)', array('@module' => drupal_ucfirst($requires)));
-          $extra['disabled'] = TRUE;
+        $extra['disabled'] = TRUE;
+      }
+      else {
+        $requires_name = $files[$requires]->info['name'];
+        if ($v) {
+          $requires_name .= $v['original_version'];
+          $current_version = str_replace(DRUPAL_CORE_COMPATIBILITY . '-', '', $files[$requires]->info['version']);
+          foreach ($v['versions'] as $required_version) {
+            if ((isset($required_version['op']) && !version_compare($current_version, $required_version['version'], $required_version['op'])) ||
+                (isset($required_version['preg']) && !preg_match($required_version['preg'], $current_version))) {
+              $extra['requires'][$requires] = t('@module (<span class="admin-missing">incompatible with</span> version @version)', array(
+                '@module' => $requires_name,
+                '@version' => $files[$requires]->info['version'],
+              ));
+              $extra['disabled'] = TRUE;
+            }
+          }
         }
-      elseif (!$files[$requires]->status) {
-        $extra['requires'][$requires] = t('@module (<span class="admin-disabled">disabled</span>)', array('@module' => $files[$requires]->info['name']));
+        if (!isset($extra['requires'][$requires])) {
+          if ($files[$requires]->status) {
+            $extra['requires'][$requires] = t('@module (<span class="admin-enabled">enabled</span>)', array('@module' => $requires_name));
+          }
+          else {
+            $extra['requires'][$requires] = t('@module (<span class="admin-disabled">disabled</span>)', array('@module' => $requires_name));
+          }
         }
-        else {
-        $extra['requires'][$requires] = t('@module (<span class="admin-enabled">enabled</span>)', array('@module' => $files[$requires]->info['name']));
       }
     }
     // Generate link for module's help page, if there is one.
