@@ -1,5 +1,5 @@
 <?php
-// $Id: system.test,v 1.58 2009-07-23 20:58:26 webchick Exp $
+// $Id: system.test,v 1.59 2009-07-28 19:06:16 dries Exp $
 
 /**
  * Helper class for module test cases.
@@ -194,6 +194,61 @@ class ModuleDependencyTestCase extends ModuleTestCase {
     // Assert that the locale tables were enabled.
     $this->assertTableCount('languages', TRUE);
     $this->assertTableCount('locale', TRUE);
+  }
+}
+
+/**
+ * Test module dependency on specific versions.
+ */
+class ModuleVersionTestCase extends ModuleTestCase {
+  public static function getInfo() {
+    return array(
+      'name' => 'Module versions',
+      'description' => 'Check module version dependencies.',
+      'group' => 'Module',
+    );
+  }
+  
+  function setup() {
+    parent::setUp('module_test');
+  }
+
+  /**
+   * Test version dependencies.
+   */
+  function testModuleVersions() {
+    $dependencies = array(
+      // Alternating between being compatible and incompatible with 7.x-2.4.
+      // The first is always a compatible.
+      'common_test',
+      // Branch incompatibility.
+      'common_test (1.x)',
+      // Branch compatibility.
+      'common_test (2.x)',
+      // Another branch incompatibility.
+      'common_test (>2.x)',
+      // Another branch compatibility.
+      'common_test (<=2.x)',
+      // Another branch incompatibility.
+      'common_test (<2.x)',
+      // Another branch compatibility.
+      'common_test (>=2.x)',
+      // Nonsense, misses a dash. Incompatible with everything.
+      'common_test (=7.x2.x, >=2.4)',
+      // Core version is optional. Compatible.
+      'common_test (=7.x-2.x, >=2.4)',
+      // Test !=, explicitly incompatible.
+      'common_test (=2.x, !=2.4)',
+      // Three operations. Compatible.
+      'common_test (=2.x, !=2.3, <2.5)',
+    );
+    variable_set('dependencies', $dependencies);
+    $n = count($dependencies);
+    for ($i = 0; $i < $n; $i++) {
+      $this->drupalGet('admin/structure/modules');
+      $checkbox = $this->xpath('//input[@id="edit-modules-Testing-module-test-enable"]');
+      $this->assertEqual(!empty($checkbox[0]['disabled']), $i % 2, $dependencies[$i]);
+    }
   }
 }
 
